# ai-gen-connect-four

./: AIValue-7x6-10.NN  AIValue-7x6-20.NN  AIValue-7x6-25.NN  AIValue-7x6-5.NN  AIValue-7x6-8.NN  AIValue-7x6-bak.NN  AIValue-7x6-bak2.NN  AIValue-7x6.NN  Cargo.toml  README.md
src/: aivaluegen.rs  main.rs
src/game/: mod.rs  nn.rs
src/game/player/: ai_value_player.rs  mod.rs
